@@ -1,3 +1,5 @@
+* Add Python3 support
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Remove states on statement's date
